--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Jiaqi Guo | 郭嘉骐
+subtitle: I am Wiss. Mitarbeiter and PhD student at Freie Universität Berlin.
 ---
+
+I am Wiss. Mitarbeiter and PhD student at Freie Universität Berlin.
