--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: home
 title: Jiaqi Guo | 郭嘉骐
-subtitle: I am Wiss. Mitarbeiter and PhD student at Freie Universität Berlin.
+subtitle:
 ---
+{: .box-note}
+**Note:** new job in Berlin.
 
 I am Wiss. Mitarbeiter and PhD student at Freie Universität Berlin.
